--- a/index.html
+++ b/index.html
@@ -438,14 +438,14 @@
             font-size: 0.75rem;
         }
         .political-bar .section.red {
-            background-color: #7a1f1f;
+            background-color: #9E3939;
         }
         .political-bar .section.white {
             background-color: #e4e7ed;
             color: #000;
         }
         .political-bar .section.blue {
-            background-color: #193580;
+            background-color: #3C3A8E;
         }
         .political-bar .section span {
             position: absolute;
