--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
             <input type="search" class="search" placeholder="Rechercher...">
         </div>
         <div class="header-right">
-            <a href="#" class="header-link header-link--button">NewsLetter</a>
+            <a href="newsletter.html" class="header-link header-link--button">NewsLetter</a>
             <a href="#" class="header-link">Login</a>
         </div>
     </header>
