--- a/economie.html
+++ b/economie.html
@@ -325,8 +325,8 @@
             <input type="search" class="search" placeholder="Rechercher...">
         </div>
         <div class="header-right">
-            <a href="#" class="header-link header-link--button">NewsLetter</a>
-            <a href="#" class="header-link">Login</a>
+            <a href="newsletter.html" class="header-link header-link--button">NewsLetter</a>
+            <a href="signup.html" class="header-link">Login</a>
         </div>
     </header>
 
