--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         </div>
         <div class="header-right">
             <a href="newsletter.html" class="header-link header-link--button">NewsLetter</a>
-            <a href="#" class="header-link">Login</a>
+            <a href="signup.html" class="header-link">Login</a>
         </div>
     </header>
 
